tests/fail/derive_struct_attributes.stderr
error: missing `format` attribute.
       Please annotate the struct with #[sscanf(format = "...")]
 --> tests/fail/derive_struct_attributes.rs:1:10
  |
1 | #[derive(sscanf::FromScanf)]
  |          ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `sscanf::FromScanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only one format attribute allowed
 --> tests/fail/derive_struct_attributes.rs:5:10
  |
5 | #[sscanf(format = "", format_unescaped = "")]
  |          ^^^^^^

error: only one format attribute allowed
 --> tests/fail/derive_struct_attributes.rs:5:23
  |
5 | #[sscanf(format = "", format_unescaped = "")]
  |                       ^^^^^^^^^^^^^^^^

error: unknown attribute arg: bob.
       Hint: valid attribute args on structs are: format, format_unescaped
 --> tests/fail/derive_struct_attributes.rs:9:23
  |
9 | #[sscanf(format = "", bob = "")]
  |                       ^^^^^^^^

error: expected `,`
  --> tests/fail/derive_struct_attributes.rs:13:22
   |
13 | #[sscanf(format = "" bob = "")]
   |                      ^^^

error: expected string literal
  --> tests/fail/derive_struct_attributes.rs:17:19
   |
17 | #[sscanf(format = 5)]
   |                   ^

error: expected expression after `=`
  --> tests/fail/derive_struct_attributes.rs:21:17
   |
21 | #[sscanf(format =)]
   |                 ^

error: expected `=`
  --> tests/fail/derive_struct_attributes.rs:25:17
   |
25 | #[sscanf(format "")]
   |                 ^^

error: expected identifier
  --> tests/fail/derive_struct_attributes.rs:29:10
   |
29 | #[sscanf(= "")]
   |          ^

error: missing `format` attribute.
       Please annotate the struct with #[sscanf(format = "...")]
  --> tests/fail/derive_struct_attributes.rs:32:10
   |
32 | #[derive(sscanf::FromScanf)]
   |          ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `sscanf::FromScanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error: attribute arg `default` can only be used on fields.
       Hint: valid attribute args on structs are: format, format_unescaped
  --> tests/fail/derive_struct_attributes.rs:33:10
   |
33 | #[sscanf(default)]
   |          ^^^^^^^

error: missing `format` attribute.
       Please annotate the struct with #[sscanf(format = "...")]
  --> tests/fail/derive_struct_attributes.rs:36:10
   |
36 | #[derive(sscanf::FromScanf)]
   |          ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `sscanf::FromScanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error: attribute arg `default` can only be used on fields.
       Hint: valid attribute args on structs are: format, format_unescaped
  --> tests/fail/derive_struct_attributes.rs:37:10
   |
37 | #[sscanf(default = "")]
   |          ^^^^^^^^^^^^

error: missing `format` attribute.
       Please annotate the struct with #[sscanf(format = "...")]
  --> tests/fail/derive_struct_attributes.rs:40:10
   |
40 | #[derive(sscanf::FromScanf)]
   |          ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `sscanf::FromScanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error: attribute arg `map` can only be used on fields.
       Hint: valid attribute args on structs are: format, format_unescaped
  --> tests/fail/derive_struct_attributes.rs:41:10
   |
41 | #[sscanf(map = |x: usize| { x })]
   |          ^^^^^^^^^^^^^^^^^^^^^^
